<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_book_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDDC39">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_book_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"
                android:contentDescription="@string/todo" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_overlay">

                <TextView
                    android:id="@+id/tv_book_title"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_above="@id/tv_book_subtitle"
                    android:layout_marginStart="16dp"
                    android:text="@string/title"
                    android:textSize="28sp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_book_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/subtitle"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_book_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/author"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_book_hardcover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/hardcover"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_book_publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/publisher"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_book_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/language"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_book_isbn10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/isbn10"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_book_isbn13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/isbn13"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_book_dimension"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/dimension"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_book_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/weight"
                    android:textColor="@android:color/white" />

            </RelativeLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_book_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:text="@string/review"
            android:textColor="@android:color/black" />
    </LinearLayout>
</ScrollView>